fix responsive & added dark scrollbar

--- a/src/components/jobs/Jobs.module.scss
+++ b/src/components/jobs/Jobs.module.scss
@@ -5,7 +5,7 @@
   grid-template-columns: 2fr 1fr;
   gap: 40px;
   font-family: $poppins;
-  margin: 40px 0;
+  margin: 40px 3%;
 }
 
 
