--- a/src/components/sectionTitle/SectionTitle.module.scss
+++ b/src/components/sectionTitle/SectionTitle.module.scss
@@ -10,6 +10,7 @@
   border-bottom: 2px solid #333333;
   height: 150px;
   line-height: 150px;
+  padding-left: 3%;
 }
 
 @media (max-width: $md) {
