--- a/src/content/contact/Contact.module.scss
+++ b/src/content/contact/Contact.module.scss
@@ -16,7 +16,7 @@ img {
   justify-content: center;
   gap: 10%;
   font-family: $poppins;
-  margin: 40px 0;
+  margin: 40px 3%;
   color: white;
 }
 
