--- a/src/content/hero/Hero.module.scss
+++ b/src/content/hero/Hero.module.scss
@@ -6,8 +6,7 @@
   justify-content: center;
   max-width: 1213px;
   margin: 0 auto;
-  padding-top: 150px;
-  padding-bottom: 80px;
+  padding: 150px 3% 80px 3%;
   gap: 82px;
 }
 
